# unity8

./: .bzrignore  .gitignore  .project  .pydevproject  ApplicationArguments.h  CMakeLists.txt  CODING  CODING.md  GreeterShell.qml  Jenkinsfile  MouseTouchAdaptor.cpp  MouseTouchAdaptor.h  README.md  Shell.qml  build  build.sh  build_unity  clickable.json  clickable.yaml  com.canonical.Unity8.gschema.xml  main.cpp  paths.h.in  run  run.sh  run_on_device  run_on_device.sh  runtests.sh  ubports.depends  unity8-greeter-wrapper  unity8-greeter.desktop.in  unity8.qmlproject
data/: 51-lomiri-greeter.conf  51-unity-greeter.conf  51-unity8-greeter.conf  CMakeLists.txt  com.canonical.Lomiri.gschema.xml  com.canonical.Unity.gschema.xml  com.canonical.Unity8.gschema.xml  com.lomiri.Shell.gschema.xml  com.lomiri.gschema.xml  devices.conf  indicators-client.desktop.in  lightdm-unity8-greeter.desktop.in  lomiri-filewatcher.conf  lomiri-greeter-init.conf  lomiri-greeter-logrotate.conf  lomiri-greeter-wrapper  lomiri-greeter.desktop.in  lomiri-mock-indicator-service.conf  lomiri.conf  lomiri.desktop.in  test.sensors  unity-indicator-test-service.conf  unity-mock-indicator-service.conf  unity-scope-tool.desktop.in  unity8-dash.conf  unity8-dash.desktop.in  unity8-dash.service  unity8-dash.url-dispatcher  unity8-filewatcher.conf  unity8-greeter-init.conf  unity8-greeter-logrotate.conf  unity8-greeter-ofono.conf  unity8-greeter-wrapper  unity8-greeter.desktop.in  unity8-greeter.pkla  unity8-session  unity8-setcap.conf  unity8.conf  unity8.desktop.in  unity8.override  (+1 more)
data/systemd-user/: CMakeLists.txt  lomiri-MODE.service.in  lomiri-systemd-wrapper
doc/: CMakeLists.txt  Doxyfile.in  devices.conf
libs/UbuntuGestures/: CMakeLists.txt  CandidateInactivityTimer.cpp  CandidateInactivityTimer.h  DebugHelpers.cpp  DebugHelpers.h  Pool.h  TimeSource.h  Timer.cpp  Timer.h  TouchOwnershipEvent.cpp  TouchOwnershipEvent.h  TouchRegistry.cpp  TouchRegistry.h  UbuntuGesturesGlobal.h  UnownedTouchEvent.cpp  UnownedTouchEvent.h
modules/IndicatorsClient/: CMakeLists.txt  flatmenuproxymodel.cpp  flatmenuproxymodel.h  indicatorsmodel.cpp
plugins/: CMakeLists.txt
plugins/AccountsService/: 50-com.canonical.unity.AccountsService.pkla  AccountsBindings.cpp  AccountsBindings.h  AccountsService.cpp  AccountsService.h  AccountsService.qmltypes  AccountsServiceDBusAdaptor.cpp  AccountsServiceDBusAdaptor.h  CMakeLists.txt  com.canonical.lomiri.AccountsService.xml  com.canonical.unity.AccountsService.policy  com.canonical.unity.AccountsService.rules  com.canonical.unity.AccountsService.xml  com.lomiri.shell.AccountsService.xml  plugin.cpp  plugin.h  qmldir
plugins/Broadcaster/: Broadcaster.cpp  Broadcaster.h  CMakeLists.txt  plugin.cpp  plugin.h  qmldir
plugins/Cursor/: CMakeLists.txt  Cursor.qml  Cursor.qmltypes  CursorImageInfo.cpp  CursorImageInfo.h  CursorImageProvider.cpp  CursorImageProvider.h  InputDispatcherFilter.cpp  InputDispatcherFilter.h  MousePointer.cpp  MousePointer.h  plugin.cpp  plugin.h  qmldir
plugins/Dash/: AudioProgressBar.qml  CMakeLists.txt  CardAttributes.qml  CardAttributesGrid.qml  CardAudioProgress.qml  CardCreator.js  CardCreatorCache.qml  CardSocialActions.qml  CardSocialAttributes.qml  CroppedImageMinimumSourceSize.qml  Dash.qmltypes  DashAudioPlayer.qml  ScopeStyle.qml  StyleTool.qml  abstractdashview.cpp  abstractdashview.h  croppedimagesizer.cpp  croppedimagesizer.h  croppedimagesizerasyncworker.cpp  croppedimagesizerasyncworker.h  horizontaljournal.cpp  horizontaljournal.h  listviewwithpageheader.cpp  listviewwithpageheader.h  organicgrid.cpp  organicgrid.h  plugin.cpp  plugin.h  qmldir  verticaljournal.cpp  verticaljournal.h
plugins/DashViews/: CMakeLists.txt  abstractdashview.cpp  abstractdashview.h  abstractjournal.cpp  abstractjournal.h  horizontaljournal.cpp  horizontaljournal.h  listviewwithpageheader.cpp  listviewwithpageheader.h  organicgrid.cpp  organicgrid.h  plugin.cpp  plugin.h  qmldir  verticaljournal.cpp  verticaljournal.h
plugins/FullLightDM/: CMakeLists.txt  DBusGreeter.cpp  Greeter.cpp  plugin.cpp  plugin.h  qmldir
plugins/GlobalShortcut/: CMakeLists.txt  GlobalShortcut.qmltypes  globalshortcut.cpp  globalshortcut.h  globalshortcutregistry.cpp  globalshortcutregistry.h  plugin.cpp  plugin.h  qmldir
plugins/Greeter/: CMakeLists.txt
plugins/HandleMediaKeys/: CMakeLists.txt  HandleMediaKeys.cpp  HandleMediaKeys.h  plugin.cpp  plugin.h  qmldir
plugins/HudClient/: CMakeLists.txt  HudClient.qmltypes  hudclient.cpp  hudclient.h  (+7 more)
po/: CMakeLists.txt  aa.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  ga.po  gd.po  gl.po  gu.po  gv.po  he.po  hi.po  hr.po  (+59 more)
qml/: CMakeLists.txt  DeviceConfiguration.qml  DisabledScreenNotice.qml  ErrorApplication.qml  GreeterShell.qml  OrientedShell.qml  ScopeTool.qml  SecondaryDisplay.qml  Shell.qml  ShellApplication.qml  ShellNotifier.qml  ShellOrientator.qml  ShellScreen.qml  qmldir
src/: ApplicationArguments.cpp  ApplicationArguments.h  CMakeLists.txt  CachingNetworkManagerFactory.cpp  CachingNetworkManagerFactory.h  DebuggingController.cpp  DebuggingController.h  DisplayConfigurationStorage.cpp  DisplayConfigurationStorage.h  LomiriApplication.cpp  LomiriApplication.h  LomiriCommandLineParser.cpp  LomiriCommandLineParser.h  MouseTouchAdaptor.cpp  MouseTouchAdaptor.h  SecondaryWindow.cpp  SecondaryWindow.h  ShellApplication.cpp  ShellApplication.h  ShellView.cpp  ShellView.h  UnityApplication.cpp  UnityApplication.h  UnityCommandLineParser.cpp  UnityCommandLineParser.h  UnixSignalHandler.cpp  UnixSignalHandler.h  WindowManagementPolicy.cpp  WindowManagementPolicy.h  main.cpp  qmldebuggerutils.h
tests/: CMakeLists.txt
tools/: CMakeLists.txt  registry-tracker.cpp  registry-tracker.h  scopetool.cpp  unix-signal-handler.cpp  unlock-device
wizard/: CMakeLists.txt  PageList.cpp  PageList.h  test.sh  ubuntu-system-settings-wizard.conf
(+3531 files in other folders)
